--- a/_layouts/archive-taxonomy.html
+++ b/_layouts/archive-taxonomy.html
@@ -18,12 +18,25 @@ author_profile: false
 <div id="main" role="main">
   {% include sidebar.html %}
 
-  <div class="archive">
+  <!-- <div class="archive">
     {% unless page.header.overlay_color or page.header.overlay_image %}
       <h1 id="page-title" class="page__title"{% if page.locale %} lang="{{ page.locale }}"{% endif %}>{{ page.title }}</h1>
     {% endunless %}
     {% for post in page.posts %}
       {% include archive-single.html %}
     {% endfor %}
+  </div>
+</div> -->
+
+
+
+<div class="archive">
+  {% unless page.header.overlay_color or page.header.overlay_image %}
+    <h1 id="page-title" class="page__title"{% if page.locale %} lang="{{ page.locale }}"{% endif %}>{{ page.title }}</h1>
+  {% endunless %}
+
+  {% assign entries_layout = page.entries_layout | default: 'list' %}
+  <div class="entries-{{ entries_layout }}">
+    {% include posts-taxonomy.html taxonomy=page.taxonomy type=entries_layout %}
   </div>
 </div>
